deployments/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deployment
  template:
    metadata:
      labels:
        app: deployment
    spec:
      containers:
        - name: deployment
          image: container-registry.mycloud/app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
