deployments/base/external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: kube-system
spec:
  type: ExternalName
  externalName: service.default.svc.cluster.local
