deployments/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  selector:
    app: deployment
  ports:
  - port: 80
    targetPort: 8080
