deployments/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: kube-system
spec:
  ingressClassName: nginx
  tls:
    - hosts: 
        - deployment.mycloud
      secretName: wildcard-secret
  rules:
    - host: deployment.mycloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: external-service
  namespace: kube-system
spec:
  type: ExternalName
  externalName: service.default.svc.cluster.local
